<resources>
    <string name="app_name">HW4</string>
    <string name="birdName">Type of Bird</string>
    <string name="zipcode">Zip Code</string>
    <string name="finderName">Name of Birdwatcher</string>
    <string name="submit">Submit</string>
    <string name="zipSearch">Enter Zip Code to Search</string>
    <string name="search">Search</string>
    <string name="searchMessage">The most recent sighting for this zip code is:</string>
    <string name="species">Species:</string>
    <string name="sighter">Spotted By:</string>
    <string name="report">Report</string>
</resources>
