<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editText_bird"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="111dp"
        android:ems="10"
        android:hint="@string/birdName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText_zipcode"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/zipcode"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_bird" />

    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:layout_marginTop="66dp"
        android:ems="10"
        android:hint="@string/finderName"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_zipcode" />

    <Button
        android:id="@+id/button_submit"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="91dp"
        android:text="@string/submit"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_name" />
</androidx.constraintlayout.widget.ConstraintLayout>