<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchActivity">

    <TextView
        android:id="@+id/textView_foundSpecies"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="45dp"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/speciesStatic"
        app:layout_constraintStart_toEndOf="@+id/speciesStatic" />

    <EditText
        android:id="@+id/editText_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:text="@string/zipSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_search"
        android:layout_width="110dp"
        android:layout_height="50dp"
        android:layout_marginTop="70dp"
        android:text="@string/search"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText_search" />

    <TextView
        android:id="@+id/textView_returnHeader"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/searchMessage"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_search" />

    <TextView
        android:id="@+id/speciesStatic"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="88dp"
        android:layout_marginTop="36dp"
        android:text="@string/species"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView_returnHeader" />

    <TextView
        android:id="@+id/staticSighter"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:text="@string/sighter"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/speciesStatic"
        app:layout_constraintTop_toBottomOf="@+id/speciesStatic" />

    <TextView
        android:id="@+id/textView_sighter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="#000000"
        android:textSize="18sp"
        app:layout_constraintBaseline_toBaselineOf="@+id/staticSighter"
        app:layout_constraintStart_toStartOf="@+id/textView_foundSpecies" />

</androidx.constraintlayout.widget.ConstraintLayout>